[tool.poetry]
name = "mcp-toolbox-for-databases"
version = "0.1.0"
description = "Google MCP Toolbox for databases integration with ADK agents"
authors = ["Mridula Vinod <mridulait67@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    {include = "database_mcp"}
]

[tool.poetry.dependencies]
python = "^3.10"
google-adk = { version = "==1.14.1", extras = ["eval"] }
google-cloud-aiplatform = {extras = ["adk", "agent-engines"], version = "^1.88.0"}
google-genai = "^1.9.0"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
mcp = "^1.0.0"
mcp-server-sqlite = "^0.5.1"
mcp-server-postgres = "^0.5.0"
httpx = "^0.27.0"
anyio = "^4.0.0"
typing-extensions = "^4.8.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
black = "^23.0.0"
mypy = "^1.0.0"

[tool.poetry.group.deployment]
optional = true

[tool.poetry.group.deployment.dependencies]
absl-py = "^2.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"